2004-06-28 Magnus Hagdorn
 * added time series support (glimmer_ts.f90) and a test program (test_ts.f90)
 * added eustatic sea level (glide_types.f90)
 * output starts at start time (ncdf_file.f90.in)
 * Edinburgh Ice Sheet model ELA forcing (eis_ela.f90)
 * Edinburgh Ice Sheet model temperature forcing (eis_temp.f90)
 * Edinburgh Ice Sheet model driver (eis_forcing.f90, eis_glide.f90)
 * example Fennoscandian ice sheet setup (fennscan1.config, europe.20km.nc, mb.data, s10.data)
	
2004-06-25 Magnus Hagdorn
 * added some more simple experiments
 * glide_setup.f90: calculate sigma if no sigma file given

2004-06-25 Magnus Hagdorn
 * added start and end time (glide_setup.f90, glide_types.f90, simple_glide.f90)
 * added and used logging
	
2004-06-24 Magnus Hagdorn
 * fixed problem with time derivative, where we divide by zero at the first time step
   now we set the derivative to zero (glimmer_thck.f90)
 * fixed problem with gradient where the mask array was of a different size than the
   array of which the derivatives are taken. We now just calculate the gradient for
   every point (glimmer_thck.f90)
 * glide.f90: reflects these changes
	
2004-06-24 Magnus Hagdorn
 * glimmer_CFproj.f90: renamed scale_factor_at_projection_origin to scale_at_orig in order to
   avoid problems with the SUN compiler
 * glimmer_isot.f90: renamed glimmer_ to glide_ 
 * glimmer_temp.f90: renamed glimmer_ to glide_,  sorted indentation, removed surface temp calculations, 
   moved flow law factor calculations around
 * glimmer_thck.f90: renamed glimmer_ to glide_, removed mass balance calculation
 * glimmer_velo.f90: renamed glimmer_ to glide_
 * ncdf_vars.def: re-enabled lat/lon
 * simple_glide.f90: add time loop
 * glide_types.f90: add lat/lon
 * glide_setup.f90: add masking function from glimmer_setup, fix option checking bug
 * glide.f90: add time step

2004-06-23 Magnus Hagdorn
 * make mapping variable optional (glimmer_CFproj.f90, generate_ncvars.py, ncdf_file.f90.in, ncdf_file.f90.in)