@@ -4,6 +4,9 @@ ela_file = mb.data
 [EIS Temperature]
 temp_file = s10.data
 
+[EIS SLC]
+slc_file = specmap.data
+
 [grid]
 ! grid sizes
 ewn = 141
@@ -14,17 +17,18 @@ dns = 20000
 
 [options]
 temperature = 1 
-#flow_law = 0
+flow_law = 0
 isostasy = 0
-#sliding_law = 4
-marine_margin = 0
-stress_calc = 0
+sliding_law = 0
+slip_coeff = 0
+marine_margin = 1
+stress_calc = 1
 evolution = 2
 
 [time]
 tstart = -120000.
 tend =   -100000.
-dt = 2.
+dt = 1.
 ntem = 1.
 nvel = 1.
 niso = 1.
@@ -38,9 +42,14 @@ institution: University of Edinburgh
 references: see PhD Magnus Hagdorn
 
 [output]
-name: fennscan.1000a.nc
+name: fennscan.500a.nc
 frequency: 500
-variables: thk uflx vflx acab artm flwa temp topg lsurf
+variables: thk uflx vflx acab artm topg lsurf eus bmlt 
+
+[output]
+name: fennscan.2000a.nc
+frequency: 2000
+variables: thk temp topg eus uvel vvel wvel
 
 [input]
 name: europe.20km.nc
