@@ -1,0 +1,126 @@
+-125000 -7.3352152999999998
+-124000 1.6537419
+-123000 7.0101753000000002
+-122000 9.0419259000000007
+-121000 8.2107551999999995
+-120000 5.2554816000000004
+-119000 1.3459009
+-118000 -2.3174070000000002
+-117000 -5.4881693
+-116000 -8.8744203000000006
+-115000 -13.3381148
+-114000 -19.1870938
+-113000 -25.990379900000001
+-112000 -32.516609099999997
+-111000 -37.318928700000001
+-110000 -39.720088500000003
+-109000 -40.274202299999999
+-108000 -39.843224900000003
+-107000 -38.827349599999998
+-106000 -37.349712799999999
+-105000 -35.779723699999998
+-104000 -34.363655100000003
+-103000 -32.8244501
+-102000 -30.731131300000001
+-101000 -28.360755600000001
+-100000 -26.575277799999999
+-99000 -26.3597891
+-98000 -27.5911531
+-97000 -29.3458468
+-96000 -30.761915399999999
+-95000 -32.0856317
+-94000 -34.055814099999999
+-93000 -36.672462600000003
+-92000 -39.135190600000001
+-91000 -40.705179700000002
+-90000 -41.259293499999998
+-89000 -41.2285094
+-88000 -41.105373
+-87000 -41.290077599999996
+-86000 -41.690270900000002
+-85000 -41.721055
+-84000 -40.304986399999997
+-83000 -36.795599000000003
+-82000 -32.054847600000002
+-81000 -27.960562299999999
+-80000 -25.990379900000001
+-79000 -26.4213573
+-78000 -28.483892000000001
+-77000 -31.285245100000001
+-76000 -34.086598199999997
+-75000 -36.734030799999999
+-74000 -39.596952100000003
+-73000 -43.383396400000002
+-72000 -48.585909299999997
+-71000 -55.081354400000002
+-70000 -62.315617899999999
+-69000 -69.395960900000006
+-68000 -75.583564999999993
+-67000 -80.447452799999994
+-66000 -83.8644879
+-65000 -85.711533900000006
+-64000 -85.988590799999997
+-63000 -84.8495791
+-62000 -82.663908000000006
+-61000 -79.770202600000005
+-60000 -76.599440299999998
+-59000 -73.613382599999994
+-58000 -71.150654599999996
+-57000 -69.395960900000006
+-56000 -68.287733299999999
+-55000 -67.518130799999994
+-54000 -66.964016999999998
+-53000 -66.871664699999997
+-52000 -67.641267200000001
+-51000 -69.118904000000001
+-50000 -70.688893100000001
+-49000 -71.889472999999995
+-48000 -72.6590755
+-47000 -73.243973400000002
+-46000 -73.921223600000005
+-45000 -74.967883
+-44000 -76.353167499999998
+-43000 -77.830804299999997
+-42000 -79.185304700000003
+-41000 -80.478236899999999
+-40000 -81.8019532
+-39000 -83.218021800000002
+-38000 -84.418601699999996
+-37000 -85.0958519
+-36000 -85.188204200000001
+-35000 -84.941931400000001
+-34000 -84.695658600000002
+-33000 -84.6033063
+-32000 -84.695658600000002
+-31000 -84.941931400000001
+-30000 -85.342124699999999
+-29000 -86.019374900000003
+-28000 -87.127602499999995
+-27000 -88.728375700000001
+-26000 -90.944830899999999
+-25000 -94.054024999999996
+-24000 -98.025173899999999
+-23000 -102.2425956
+-22000 -105.9366876
+-21000 -108.5841202
+-20000 -110.3080298
+-19000 -111.16998460000001
+-18000 -110.8313595
+-17000 -108.4917679
+-16000 -103.50474370000001
+-15000 -95.931855100000007
+-14000 -86.450352300000006
+-13000 -75.768269599999996
+-12000 -64.439720800000003
+-11000 -53.018819700000002
+-10000 -42.213600599999999
+-9000 -32.5781773
+-8000 -24.2972544
+-7000 -17.186127299999999
+-6000 -11.090875499999999
+-5000 -0.71663379999999999
+-4000 -2.0711341999999999
+-3000 -1.2707476
+-2000 3.1929468999999999
+-1000 7.1025276000000002
+0 8.7033007999999992
