@@ -15,23 +15,24 @@ dew = 10000
 dns = 10000
 
 [options]
-temperature = 1 
-#flow_law = 0
+temperature = 0
+flow_law = 2
 isostasy = 0
-#sliding_law = 4
+sliding_law = 4
 marine_margin = 2
-stress_calc = 0
+stress_calc = 2
 evolution = 2
 
 [time]
 tstart = 0.
 tend = 20000.
-dt = 5.
+dt = .5
 ntem = 1.
 nvel = 1.
 niso = 1.
 
 [parameters]
+ice_limit = 200
 flow_factor = 1.
 
 [default]
